header and footer no longer collapse when loading/no content

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -11,9 +11,6 @@ body {
   @media screen and (min-width: 768px) {
     background-color: $primary-color;
   }
-  > * {
-    // min-height: 100dvh;
-  }
 }
 
 .container {
